--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,4 +128,7 @@ dependencies {
     //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    //Paging
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
