--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,8 @@ ext {
     mockito_kotlin_version = '3.1.0'
     mockito_inline_version = '3.3.3'
     dexmaker_version = '2.28.0'
-    simplexml_version = '2.7.1'
-    rootbeer_version = '0.0.8'
     glide_version = '4.12.0'
-    webkit_verison = '1.4.0'
+    paging_version = "3.0.0-rc01"
 }
 
 task clean(type: Delete) {
